--- a/core_testing/pubspec.yaml
+++ b/core_testing/pubspec.yaml
@@ -12,12 +12,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  injectable: ^2.5.0
+  get_it: ^8.0.3
+
+  di:
+    path: ../di
+  domain:
+    path: ../domain
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-# flutter:
 
+  build_runner: ^2.4.15
+  injectable_generator: ^2.7.0
+# flutter:
 # To add assets to your package, add an assets section, like this:
 # assets:
 #   - images/a_dot_burr.jpeg
