--- a/domain/pubspec.yaml
+++ b/domain/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
 
   di:
     path: ../di
+  core_testing:
+    path: ../core_testing
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +29,7 @@ dev_dependencies:
 
   build_runner: ^2.4.15
   injectable_generator: ^2.7.0
+  mockito: ^5.4.6
 # flutter:
 
 # To add assets to your package, add an assets section, like this:
