--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -15,12 +15,14 @@ dependencies:
   flutter_gen: ^5.10.0
   injectable: ^2.5.0
   get_it: ^8.0.3
+  dartz: ^0.10.1
 
   di:
     path: ../di
   domain:
     path: ../domain
-  dartz: ^0.10.1
+  core_testing:
+    path: ../core_testing
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +31,7 @@ dev_dependencies:
   flutter_gen_runner: ^5.10.0
   build_runner: ^2.4.15
   injectable_generator: ^2.7.0
+  mockito: ^5.4.6
 
 flutter:
   # To add assets to your package, add an assets section, like this:
