--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,8 @@ dev_dependencies:
   # dart run build_runner build --delete-conflicting-outputs
   build_runner: ^2.4.15
   injectable_generator: ^2.7.0
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
